made adjustments via QA issue on mobile

--- a/main.css
+++ b/main.css
@@ -96,7 +96,7 @@ nav ul {
     color: rgba(247, 247, 247, 1);
 }
 
-header a, a:visited, header a:hover, header a:active {
+header a, header a:visited, header a:hover, header a:active {
     color: rgba(247, 247, 247, 1);
 }
 
@@ -219,6 +219,10 @@ header {
     display: none;
 }
 
+.headline {
+    padding: 40px 20px;
+}
+
 .headline h1 {
     font-size: 2.75rem;
     line-height: 3.5rem;
@@ -295,6 +299,7 @@ section.content p:first-of-type::first-letter {
     background-position: center center;
     background-repeat: no-repeat;
     color: rgba(247, 247, 247, 1);
+    text-shadow: 1px 1px 2px black;
 }
 
 .value .content, .mobileValue .content {
@@ -311,8 +316,8 @@ section.content p:first-of-type::first-letter {
 } 
 
 .value .content p, .mobileValue .content p {
-    font-size: 1.75rem;
-    line-height: 2.5rem;
+    font-size: 1.5rem;
+    line-height: 2.25rem;
 } 
 
 .people {
@@ -412,7 +417,7 @@ section.content p:first-of-type::first-letter {
 }
 
 .project .content {
-    display: none;
+    display: block;
     position: absolute;
     width: 100%;
     height: 100%;
@@ -424,7 +429,7 @@ section.content p:first-of-type::first-letter {
 }
 
 .projectTint {
-    display: none;
+    display: block;
     width: 100%;
     height: 100%;
 }
@@ -730,16 +735,6 @@ footer .copyright {
     color: white;
 }
 
-@media screen and (min-width: 320px) {
-    .headline {
-        padding: 40px 20px;
-    }
-
-    .articles {
-        height: 50vh;
-    }
-}
-
 @media screen and (min-width: 565px) {
     .brand {
         font-size: 2.5rem;
@@ -820,7 +815,7 @@ footer .copyright {
     .hero {
         background-image: url('images/codeBG-M.jpg');
         height: 100vh;
-        padding: 250px 0;
+        padding: 25% 0;
     }
 
     .headline {
@@ -927,6 +922,10 @@ footer .copyright {
     .portrait .content {
         width: 50%;
         margin-left: 50px;
+    }
+    
+    .hero {
+        padding: 15% 0;
     }
 
     .headline .flexSpacer {
